[package]
name = "samsmrti"
version = "0.1.0"
edition = "2021"
description = "A modern spaced repetition app"
default-run = "samsmrti"

[lib]
name = "samsmrti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
zip = "2"
tempfile = "3"
flate2 = "1"
dirs = "6"

[[bin]]
name = "import_anki"
path = "src/bin/import_anki.rs"

[[bin]]
name = "import_senators"
path = "src/bin/import_senators.rs"

[[bin]]
name = "import_quizbowl"
path = "src/bin/import_quizbowl.rs"
